--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
 /target/
 /src/main/resources/conf/jdbc.properties
 gugutech-else.iml
-.idea/
-.project/
-.settings/
+/.idea
+/.project
+/.settings
 *.iml
